Fix badge alignment on news box

--- a/css/components/_featured-box.scss
+++ b/css/components/_featured-box.scss
@@ -110,11 +110,6 @@
 
 @media only screen and (min-width: 992px) {
   .sfn-featured-newsbox {
-      &.sfn-top-featured {
-        .sfn-meta__badge {
-          top: -16px;
-        }
-      }
     &--horizontal {
       display: flex;
       > div {
