--- a/css/global/_global.scss
+++ b/css/global/_global.scss
@@ -84,6 +84,6 @@ img {
     padding-top: 150px;
   }
   @media (min-width: 992px) {
-    padding-top: 162px;
+    padding-top: 163px;
   }
 }
